# arachne_fullstack

./: .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.sandbox  Makefile  README.md  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.yml  plan.md  signup-fixes-prompt.md
backend/: .env.example  Dockerfile  check_settings.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025-12-31_init.py  2026-01-07_add_system_prompt_to_conversation.py  2026-01-08_add_default_model_to_user.py  2026-01-08_add_default_system_prompt_to_user.py  2026-01-12_add_message_attachments.py  2026-01-23_add_plans_and_plan_tasks.py  2026-01-26_add_conversation_pinned_content.py  2026-02-11_add_session_state_compression.py
backend/app/: __init__.py  admin.py  main.py
backend/app/agents/: assistant.py  cached_google_model.py  context_optimizer.py  factory.py  prompts.py  repo_serializer.py  tool_register.py
backend/app/agents/providers/: __init__.py  base.py  gemini.py  registry.py  vertex.py
backend/app/agents/tools/: __init__.py  academic_search.py  datetime_tool.py  decorators.py  extract_webpage.py  plan_service.py  s3_image.py
backend/app/api/: deps.py
backend/app/clients/academic/: __init__.py  arxiv.py  openalex.py  semantic_scholar.py
backend/app/core/: cache.py  cache_manager.py  config.py  csrf.py  docker.py  exceptions.py  logfire_setup.py  security.py  user_scope.py  utils.py
backend/app/db/: base.py  session.py
backend/app/repositories/: conversation.py  plan.py  session.py  user.py
backend/app/sandbox_lib/: __init__.py  storage_client.py
backend/app/schemas/: __init__.py  academic.py  assistant.py  attachment.py  conversation.py  extract_webpage.py  file.py  models.py  plan.py  planning.py  spawn_agent_deps.py  token.py  user.py  web_search.py
backend/app/services/: conversation.py  pinned_content.py  plan.py  python.py  s3.py  settings.py  user.py
backend/app/worker/: celery_app.py
backend/cli/: commands.py
backend/tests/: conftest.py  test_admin.py  test_agents.py  test_context_optimizer.py  test_core.py  test_pinned_content.py  test_plan_repository.py  test_plan_store.py  test_providers.py  test_services.py  test_storage_proxy.py  test_tool_schemas.py  test_worker.py
backend/tests/api/: test_auth.py  test_exceptions.py  test_files.py  test_items.py  test_models.py  test_users.py
(+157 files in other folders)
